-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.8.0
-
windows 7
With following code example, both onMovingHorizontallyChanged and onMovingVerticallyChanged are received, when moving element directly to one direction.
import QtQuick 1.0 Flickable { width: 500; height: 500 contentWidth: image.width; contentHeight: image.height Image { id: image; source: "image.png" } onMovingHorizontallyChanged: console.log("Move Horizontally") onMovingVerticallyChanged: console.log("Move Verticatally") }