Wrong signals received when moving Flickable element

Both onMovingHorizontallyChanged and onMovingVerticallyChanged received
when Flickable element moved only to one direction.
Fixed so that only relevant signal sent.
Task-Id: QTBUG-25042

Change-Id: I20acb2403e08c2afa681da2e553cea227c91f001
Reviewed-by: Martin Jones <martin.jones@nokia.com>